style: modification de l'apparition des cards (accueil) et des plats(pages menus)

--- a/Restaurants/delice.html
+++ b/Restaurants/delice.html
@@ -40,27 +40,27 @@
 
                     <div>
                         <div class="card">
-                            <h3>Tartare de thon</h3>
+                            <h3 class="over">Tartare de thon</h3>
                             <div class="card__contenu">
-                                <p>Assaisonné au yuzu</p>
+                                <p class="over">Assaisonné au yuzu</p>
                                 <p class="card__prix">25€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Bouchée de homard croustillant</h3>
+                            <h3 class="over">Bouchée de homard croustillant</h3>
                             <div class="card__contenu">
-                                <p>Et sa farandole de petits légumes</p>
+                                <p class="over">Et sa farandole de petits légumes</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Velouté de cèpes</h3>
+                            <h3 class="over">Velouté de cèpes</h3>
                             <div class="card__contenu">
-                                <p>Aux truffes</p>
+                                <p class="over">Aux truffes</p>
                                 <p class="card__prix">20€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -74,28 +74,28 @@
                         <p class="position">PLATS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Poulet rôti aux herbes de Provence</h3>
+                        <div class="card plat">
+                            <h3 class="over">Poulet rôti aux herbes de Provence</h3>
                             <div class="card__contenu">
-                                <p>Et sa crème de truffe</p>
+                                <p class="over">Et sa crème de truffe</p>
                                 <p class="card__prix">40€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Langouste rôtie</h3>
+                        <div class="card plat">
+                            <h3 class="over">Langouste rôtie</h3>
                             <div class="card__contenu">
-                                <p>Et ses légumes de saison</p>
+                                <p class="over">Et ses légumes de saison</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Côte de bœuf Angus</h3>
+                        <div class="card plat">
+                            <h3 class="over">Côte de bœuf Angus</h3>
                             <div class="card__contenu">
-                                <p>Et sa purée de panais</p>
+                                <p class="over">Et sa purée de panais</p>
                                 <p class="card__prix">44€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -109,28 +109,28 @@
                         <p class="position">DESSERTS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Farandole de desserts</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Farandole de desserts</h3>
                             <div class="card__contenu">
-                                <p>Du chef</p>
+                                <p class="over">Du chef</p>
                                 <p class="card__prix">18€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Crème brulée</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Crème brulée</h3>
                             <div class="card__contenu">
-                                <p>Revisitée</p>
+                                <p class="over">Revisitée</p>
                                 <p class="card__prix">22€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Tiramisu</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Tiramisu</h3>
                             <div class="card__contenu">
-                                <p>À la noisette</p>
+                                <p class="over">À la noisette</p>
                                 <p class="card__prix">23€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -172,7 +172,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="mailto:votreadresse@mail.fr">
                             Contact
                         </a>
                     </li>
