--- a/Restaurants/francaise.html
+++ b/Restaurants/francaise.html
@@ -40,27 +40,27 @@
 
                     <div>
                         <div class="card">
-                            <h3>Tartare de poulpe acidulé</h3>
+                            <h3 class="over">Tartare de poulpe acidulé</h3>
                             <div class="card__contenu">
-                                <p>Aux zestes d'orange</p>
+                                <p class="over">Aux zestes d'orange</p>
                                 <p class="card__prix">25€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Velouté de légumes d'antan</h3>
+                            <h3 class="over">Velouté de légumes d'antan</h3>
                             <div class="card__contenu">
-                                <p>Carotte, panais, topinambour</p>
+                                <p class="over">Carotte, panais, topinambour</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Soupe à l'oignon</h3>
+                            <h3 class="over">Soupe à l'oignon</h3>
                             <div class="card__contenu">
-                                <p>Revisitée</p>
+                                <p class="over">Revisitée</p>
                                 <p class="card__prix">20€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -74,28 +74,28 @@
                         <p class="position">PLATS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Coquilles Saint-Jacques</h3>
+                        <div class="card plat">
+                            <h3 class="over">Coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
-                                <p>Accompagnées d'une purée de panais</p>
+                                <p class="over">Accompagnées d'une purée de panais</p>
                                 <p class="card__prix">40€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Magret de canard</h3>
+                        <div class="card plat">
+                            <h3 class="over">Magret de canard</h3>
                             <div class="card__contenu">
-                                <p>Et parmentier de pommes de terre</p>
+                                <p class="over">Et parmentier de pommes de terre</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                        <div class="card plat">
+                            <h3 class="over">Pigeonneau d’Ille-et-Vilaine</h3>
                             <div class="card__contenu">
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p class="over">Sur son lit de gnocchis aux légumes</p>
                                 <p class="card__prix">44€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -109,28 +109,28 @@
                         <p class="position">DESSERTS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Pétales de violettes glacés</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Pétales de violettes glacés</h3>
                             <div class="card__contenu">
-                                <p>Et purée de noisettes</p>
+                                <p class="over">Et purée de noisettes</p>
                                 <p class="card__prix">18€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Fondant au chocolat</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Fondant au chocolat</h3>
                             <div class="card__contenu">
-                                <p>Revisité</p>
+                                <p class="over">Revisité</p>
                                 <p class="card__prix">22€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Millefeuille croustillant</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Millefeuille croustillant</h3>
                             <div class="card__contenu">
-                                <p>Myrtilles et pâte d’amande</p>
+                                <p class="over">Myrtilles et pâte d’amande</p>
                                 <p class="card__prix">23€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -172,7 +172,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="mailto:votreadresse@mail.fr">
                             Contact
                         </a>
                     </li>
