--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -40,36 +40,36 @@
 
                     <div>
                         <div class="card">
-                            <h3>Ravioles de foie gras</h3>
+                            <h3 class="over">Ravioles de foie gras</h3>
                             <div class="card__contenu">
-                                <p>Accompagnées de leur crème à la truffe</p>
+                                <p class="over">Accompagnées de leur crème à la truffe</p>
                                 <p class="card__prix">25€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Caviar osciètre</h3>
+                            <h3 class="over">Caviar osciètre</h3>
                             <div class="card__contenu">
-                                <p>Sur blini à la farine de blé noir</p>
+                                <p class="over">Sur blini à la farine de blé noir</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Homard et espuma de potiron</h3>
+                            <h3 class="over">Homard et espuma de potiron</h3>
                             <div class="card__contenu">
-                                <p>Marinés aux zestes d'orange</p>
+                                <p class="over">Marinés aux zestes d'orange</p>
                                 <p class="card__prix">20€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
-                            <h3>Foie gras de canard cuit entier</h3>
+                            <h3 class="over">Foie gras de canard cuit entier</h3>
                             <div class="card__contenu">
-                                <p>Confiture de figue et pain toasté</p>
+                                <p class="over">Confiture de figue et pain toasté</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -83,28 +83,28 @@
                         <p class="position">PLATS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Noix de coquilles Saint-Jacques</h3>
+                        <div class="card plat">
+                            <h3 class="over">Noix de coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
-                                <p>Sur lit de purée de céleri-rave</p>
+                                <p class="over">Sur lit de purée de céleri-rave</p>
                                 <p class="card__prix">40€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Langoustine poêlée</h3>
+                        <div class="card plat">
+                            <h3 class="over">Langoustine poêlée</h3>
                             <div class="card__contenu">
-                                <p>Purée de patate douce</p>
+                                <p class="over">Purée de patate douce</p>
                                 <p class="card__prix">35€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Mijoté de queue de bœuf</h3>
+                        <div class="card plat">
+                            <h3 class="over">Mijoté de queue de bœuf</h3>
                             <div class="card__contenu">
-                                <p>Et riz sauvage aux zestes de citron</p>
+                                <p class="over">Et riz sauvage aux zestes de citron</p>
                                 <p class="card__prix">44€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -118,28 +118,28 @@
                         <p class="position">DESSERTS</p>
                     </div>
                     <div>
-                        <div class="card">
-                            <h3>Macaron noisette et chocolat</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Macaron noisette et chocolat</h3>
                             <div class="card__contenu">
-                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <p class="over">Glace au caramel brun et sel de Guérande</p>
                                 <p class="card__prix">18€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Baba au rhum revisité</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Baba au rhum revisité</h3>
                             <div class="card__contenu">
-                                <p>Avec son coulis de citron</p>
+                                <p class="over">Avec son coulis de citron</p>
                                 <p class="card__prix">22€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
-                        <div class="card">
-                            <h3>Tarte au citron meringuée</h3>
+                        <div class="card dessert">
+                            <h3 class="over">Tarte au citron meringuée</h3>
                             <div class="card__contenu">
-                                <p>Déstructurée</p>
+                                <p class="over">Déstructurée</p>
                                 <p class="card__prix">23€</p>
                             </div>
                             <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
@@ -181,7 +181,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="mailto:votreadresse@mail.fr">
                             Contact
                         </a>
                     </li>
