--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <h2>Restaurants</h2>
                     </div>
                     <div class="restaurant__list">   
-                        <div class="restaurant__cards">
+                        <div class="restaurant__cards ">
                                 <article>
                                     <span class="restaurant__new"><p>Nouveau</p></span>
                                     <a href="restaurants/palette.html">
@@ -93,7 +93,7 @@
                                 </article>
                         </div>
 
-                        <div class="restaurant__cards petit" id="note">
+                        <div class="restaurant__cards petit note" id="note">
                                 <article>
                                     <span class="restaurant__new"><p>Nouveau</p></span>
                                     <a href="Restaurants/note.html"><img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></a>
@@ -110,7 +110,7 @@
                                 </article>
                         </div>
 
-                        <div class="restaurant__cards petit">
+                        <div class="restaurant__cards petit francaise">
                                 <article>
                                     <a href="Restaurants/francaise.html"><img src="assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"></a>
                                     <div class="restaurant__nom">
@@ -126,7 +126,7 @@
                                 </article>
                         </div>
                         
-                        <div class="restaurant__cards petit">
+                        <div class="restaurant__cards petit delice ">
                                 <article>
                                     <a href="Restaurants/delice.html"><img src="assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"></a>
                                     <div class="restaurant__nom">
@@ -150,7 +150,7 @@
                 <h3>ohmyfood</h3>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <i class="fa-solid fa-utensils"></i>
                             Proposer un restaurant
                         </a>
@@ -170,7 +170,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="mailto:votreadresse@mail.fr">
                             Contact
                         </a>
                     </li>
