chore: modification de lien dans les cards

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="restaurant__cards ">
                                 <article>
                                     <span class="restaurant__new"><p>Nouveau</p></span>
-                                    <a href="restaurants/palette.html">
+                                    <a href="Restaurants/palette.html">
                                         <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                                     </a>
                                     <div class="restaurant__nom">
