chore: modification index  carte restaurant et note scss

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="restaurant__list">   
                         <div class="restaurant__cards ">
                                 <article>
-                                    <span class="restaurant__new"><p>Nouveau</p></span>
+                                    <div class="restaurant__new"><p>Nouveau</p></div>
                                     <a href="Restaurants/palette.html">
                                         <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                                     </a>
@@ -95,7 +95,7 @@
 
                         <div class="restaurant__cards petit note" id="note">
                                 <article>
-                                    <span class="restaurant__new"><p>Nouveau</p></span>
+                                    <div class="restaurant__new"><p>Nouveau</p></div>
                                     <a href="Restaurants/note.html"><img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
