fix: ajout d'un overflow pour les cartes menu (page restaurant)

--- a/Restaurants/delice.html
+++ b/Restaurants/delice.html
@@ -40,30 +40,36 @@
 
                     <div>
                         <div class="card">
-                            <h3 class="over">Tartare de thon</h3>
-                            <div class="card__contenu">
-                                <p class="over">Assaisonné au yuzu</p>
-                                <p class="card__prix">25€</p>
+                            <div class="card__hover">
+                                <h3 class="over">Tartare de thon</h3>
+                                <div class="card__contenu">
+                                    <p class="over">Assaisonné au yuzu</p>
+                                    <p class="card__prix">25€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Bouchée de homard croustillant</h3>
-                            <div class="card__contenu">
-                                <p class="over">Et sa farandole de petits légumes</p>
-                                <p class="card__prix">35€</p>
+                                <div class="card__contenu">
+                                    <p class="over">Et sa farandole de petits légumes</p>
+                                    <p class="card__prix">35€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Velouté de cèpes</h3>
-                            <div class="card__contenu">
-                                <p class="over">Aux truffes</p>
-                                <p class="card__prix">20€</p>
+                                <div class="card__contenu">
+                                    <p class="over">Aux truffes</p>
+                                    <p class="card__prix">20€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -75,30 +81,36 @@
                     </div>
                     <div>
                         <div class="card plat">
-                            <h3 class="over">Poulet rôti aux herbes de Provence</h3>
-                            <div class="card__contenu">
-                                <p class="over">Et sa crème de truffe</p>
-                                <p class="card__prix">40€</p>
+                            <div class="card__hover">
+                                <h3 class="over">Poulet rôti aux herbes de Provence</h3>
+                                <div class="card__contenu">
+                                    <p class="over">Et sa crème de truffe</p>
+                                    <p class="card__prix">40€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
-                            <h3 class="over">Langouste rôtie</h3>
-                            <div class="card__contenu">
-                                <p class="over">Et ses légumes de saison</p>
-                                <p class="card__prix">35€</p>
+                            <div class="card__hover">
+                                <h3 class="over">Langouste rôtie</h3>
+                                <div class="card__contenu">
+                                    <p class="over">Et ses légumes de saison</p>
+                                    <p class="card__prix">35€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
-                            <h3 class="over">Côte de bœuf Angus</h3>
-                            <div class="card__contenu">
-                                <p class="over">Et sa purée de panais</p>
-                                <p class="card__prix">44€</p>
+                            <div class="card__hover">
+                                <h3 class="over">Côte de bœuf Angus</h3>
+                                <div class="card__contenu">
+                                    <p class="over">Et sa purée de panais</p>
+                                    <p class="card__prix">44€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -110,30 +122,36 @@
                     </div>
                     <div>
                         <div class="card dessert">
-                            <h3 class="over">Farandole de desserts</h3>
-                            <div class="card__contenu">
-                                <p class="over">Du chef</p>
-                                <p class="card__prix">18€</p>
+                            <div class="card__hover">
+                                <h3 class="over">Farandole de desserts</h3>
+                                <div class="card__contenu">
+                                    <p class="over">Du chef</p>
+                                    <p class="card__prix">18€</p>
+                                </div>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Crème brulée</h3>
                             <div class="card__contenu">
                                 <p class="over">Revisitée</p>
                                 <p class="card__prix">22€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Tiramisu</h3>
                             <div class="card__contenu">
                                 <p class="over">À la noisette</p>
                                 <p class="card__prix">23€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
