--- a/Restaurants/francaise.html
+++ b/Restaurants/francaise.html
@@ -40,30 +40,36 @@
 
                     <div>
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Tartare de poulpe acidulé</h3>
                             <div class="card__contenu">
                                 <p class="over">Aux zestes d'orange</p>
                                 <p class="card__prix">25€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Velouté de légumes d'antan</h3>
                             <div class="card__contenu">
                                 <p class="over">Carotte, panais, topinambour</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Soupe à l'oignon</h3>
                             <div class="card__contenu">
                                 <p class="over">Revisitée</p>
                                 <p class="card__prix">20€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -75,30 +81,36 @@
                     </div>
                     <div>
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
                                 <p class="over">Accompagnées d'une purée de panais</p>
                                 <p class="card__prix">40€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Magret de canard</h3>
                             <div class="card__contenu">
                                 <p class="over">Et parmentier de pommes de terre</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Pigeonneau d’Ille-et-Vilaine</h3>
                             <div class="card__contenu">
                                 <p class="over">Sur son lit de gnocchis aux légumes</p>
                                 <p class="card__prix">44€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -110,30 +122,36 @@
                     </div>
                     <div>
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Pétales de violettes glacés</h3>
                             <div class="card__contenu">
                                 <p class="over">Et purée de noisettes</p>
                                 <p class="card__prix">18€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Fondant au chocolat</h3>
                             <div class="card__contenu">
                                 <p class="over">Revisité</p>
                                 <p class="card__prix">22€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Millefeuille croustillant</h3>
                             <div class="card__contenu">
                                 <p class="over">Myrtilles et pâte d’amande</p>
                                 <p class="card__prix">23€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
