--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -40,39 +40,47 @@
 
                     <div>
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Ravioles de foie gras</h3>
                             <div class="card__contenu">
                                 <p class="over">Accompagnées de leur crème à la truffe</p>
                                 <p class="card__prix">25€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Caviar osciètre</h3>
                             <div class="card__contenu">
                                 <p class="over">Sur blini à la farine de blé noir</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Homard et espuma de potiron</h3>
                             <div class="card__contenu">
                                 <p class="over">Marinés aux zestes d'orange</p>
                                 <p class="card__prix">20€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Foie gras de canard cuit entier</h3>
                             <div class="card__contenu">
                                 <p class="over">Confiture de figue et pain toasté</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -84,30 +92,36 @@
                     </div>
                     <div>
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Noix de coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
                                 <p class="over">Sur lit de purée de céleri-rave</p>
                                 <p class="card__prix">40€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Langoustine poêlée</h3>
                             <div class="card__contenu">
                                 <p class="over">Purée de patate douce</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Mijoté de queue de bœuf</h3>
                             <div class="card__contenu">
                                 <p class="over">Et riz sauvage aux zestes de citron</p>
                                 <p class="card__prix">44€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -119,30 +133,36 @@
                     </div>
                     <div>
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Macaron noisette et chocolat</h3>
                             <div class="card__contenu">
                                 <p class="over">Glace au caramel brun et sel de Guérande</p>
                                 <p class="card__prix">18€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Baba au rhum revisité</h3>
                             <div class="card__contenu">
                                 <p class="over">Avec son coulis de citron</p>
                                 <p class="card__prix">22€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Tarte au citron meringuée</h3>
                             <div class="card__contenu">
                                 <p class="over">Déstructurée</p>
                                 <p class="card__prix">23€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
