--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -42,30 +42,36 @@
                     
                     <div>
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Fricassée d'escargots</h3>
                             <div class="card__contenu">
                                 <p class="over">Au piments d'Espelette</p>
                                 <p class="card__prix">25€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Foie gras de canard mi-cuit</h3>
                             <div class="card__contenu">
                                 <p class="over">Et ses copeaux de truffe noire</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
+                            <div class="card__hover">
                             <h3 class="over">Œuf au plat</h3>
                             <div class="card__contenu">
                                 <p class="over">Assaisonné à la truffe sur lit de caviar</p>
                                 <p class="card__prix">20€</p>
-                                <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                             </div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -79,30 +85,36 @@
 
                     <div>
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Filet de bœuf aux herbes</h3>
                             <div class="card__contenu">
                                 <p class="over">Accompagné de sa ribambelle de légumes</p>
                                 <p class="card__prix">40€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Parmentier de queue de bœuf</h3>
                             <div class="card__contenu">
                                 <p class="over">À la truffe noire sur sa purée de panais</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card plat">
+                            <div class="card__hover">
                             <h3 class="over">Filet de turbot</h3>
                             <div class="card__contenu">
                                 <p class="over">Aux agrumes</p>
                                 <p class="card__prix">44€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -116,30 +128,36 @@
 
                     <div>
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Paris-Brest</h3>
                             <div class="card__contenu">
                                 <p class="over">Revisité</p>
                                 <p class="card__prix">18€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Macaron au chocolat d'exception</h3>
                             <div class="card__contenu">
                                 <p class="over">Et glace à la vanille de Madagascar</p>
                                 <p class="card__prix">22€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                         <div class="card dessert">
+                            <div class="card__hover">
                             <h3 class="over">Mousse au chocolat</h3>
                             <div class="card__contenu">
                                 <p class="over">Au piment d'Espelette et à la truffe noire</p>
                                 <p class="card__prix">23€</p>
                             </div>
-                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
+                            </div>
+                            <div class="volet__hover"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
 
                     </div>
